# IOTA-SmartContracts

./: .gitignore  .gitmodules  Compile-SmartContract.md  README.md  go.mod  go.sum
SmartContract/: Cargo.toml
Tests/: lib_test.go
Tests/testutils/: contractWasmFileFinder.go
Tests/testutils/codesamples/: send_and_receive_tokens_test.go
general-docs/: Compile-SmartContract.md  UnitTest-and-debug-SmartContract.md  WhyGo.md
rust-docs/: Compile-SmartContract.md
smartcontract/rust/: .gitignore  .gitmodules  Cargo.toml  LICENSE
smartcontract/rust/code_samples/: Cargo.toml
smartcontract/rust/code_samples/src/: lib.rs
smartcontract/rust/iota_sc_utils/: Cargo.toml
smartcontract/rust/iota_sc_utils/src/: getter.rs  lib.rs  math.rs  params.rs  results.rs  state.rs  vars.rs
smartcontract/rust/src/: access_utils.rs  lib.rs  math_test_functions.rs  sc_utils.rs
tests/iota_sc_utils/: functions_access_test.go  math_test.go
tests/smartcontract/: functions_access_test.go  my_iota_smart_contract_test.go
tests/testutils/: access_control.go  contractWasmFileFinder.go
tests/testutils/codesamples/: chain_samples_test.go  constants.go  send_and_receive_tokens_test.go  smart_contract_interactions_test.go  wallet_test.go
tests/testutils/testconstants/: test_constants.go
