  
[package]
edition = "2018"
name = "my_iota_sc"
description = "This is a smart contract for ISCP (IOTA Smart Contract Protocol)"
license = "MIT"
version = "0.0.1"
authors = ["Author name <author@email.address>"]
repository = "https://github.com/user/project"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
iota_sc_utils = { path = "iota_sc_utils" }
wasmlib = { path = "wasp/contracts/rust/wasmlib" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"