
[package]
edition = "2018"
name = "my_iota_sc"
description = "This is a smart contract for ISCP (IOTA Smart Contract Protocol)"
license = "MIT"
version = "0.0.1"
authors = ["Author name <author@email.address>"]
repository = "https://github.com/user/project"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

wasmlib = { git = "https://github.com/brunoamancio/Wasm-lib", tag="v0.1.0" }
iota_sc_utils = { git = "https://github.com/brunoamancio/IOTA-SC-Utils", tag = "v0.8.4"}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"